log
Thu 25 Apr 2024 09:17:40 PM UTC: 
 tests:  0|6
total_score: 0/70
3fa13c6
Thu 25 Apr 2024 09:32:56 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
1979638
Thu 25 Apr 2024 09:36:49 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
3688463
Thu 25 Apr 2024 09:42:20 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:9: error: break statement not within loop or switch
   44 |         break;
      |         ^~~~~
Compilation failed
a9c52d0
Thu 25 Apr 2024 09:42:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
19458e2
Thu 25 Apr 2024 09:44:41 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
d2d483b
Thu 25 Apr 2024 10:03:48 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  6|3
total_score: 40/70
bc246e0
Thu 25 Apr 2024 10:05:47 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  9|2
total_score: 50/70
ac5d25c
Thu 25 Apr 2024 10:11:21 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  12|1
total_score: 60/70
89992ab
